Contact me completed

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.6.7",
     "react-particles-js": "^3.4.1",
     "react-popupbox": "^2.0.8",
     "react-scripts": "4.0.3",
