--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.6.7",
+    "react-made-with-love": "^1.0.1",
     "react-particles-js": "^3.4.1",
     "react-popupbox": "^2.0.8",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-share": "^4.4.0",
+    "react-social-icons": "^5.4.0",
     "react-typed": "^1.2.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
